Fix: carousel - s'assurer que les deux flèches sont visibles, amélioration calcul défilement avec centrage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -448,11 +448,11 @@ p {
 }
 
 .carousel-btn-prev {
-  left: 20px;
+  left: 20px !important;
 }
 
 .carousel-btn-next {
-  right: 20px;
+  right: 20px !important;
 }
 
 .carousel-btn:disabled {
